--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.1",
+    "@aws-amplify/ui-react-ai": "^1.5.0",
     "aws-amplify": "^6.15.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
